# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-20 17:26:10 GMT	John Goerzen <jgoerzen@complete.org>	patch-100

    Summary:
      Fixed a MemoryBuffer vPutStr bug
    Revision:
      missingh--head--0.7--patch-100


    modified files:
     ChangeLog libsrc/MissingH/IO/HVIO.hs testsrc/HVIOtest.hs


2004-12-20 17:14:02 GMT	John Goerzen <jgoerzen@complete.org>	patch-99

    Summary:
      Fixed a bug in default readline code
    Revision:
      missingh--head--0.7--patch-99


    modified files:
     ChangeLog libsrc/MissingH/IO/HVIO.hs testsrc/HVIOtest.hs


2004-12-20 17:01:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-98

    Summary:
      Disabled vShow; apparently hShow is unsupported in Hugs
    Revision:
      missingh--head--0.7--patch-98


    new files:
     libsrc/MissingH/IO/HVFS/InstanceHelpers.hs testsrc/HVIOtest.hs

    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs
     libsrc/MissingH/IO/HVIO.hs testsrc/Tests.hs


2004-12-20 16:33:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-97

    Summary:
      Updated
    Revision:
      missingh--head--0.7--patch-97


    new files:
     libsrc/MissingH/IO/HVFS/.arch-ids/=id

    modified files:
     ChangeLog

    new directories:
     libsrc/MissingH/IO/HVFS libsrc/MissingH/IO/HVFS/.arch-ids


2004-12-20 16:31:21 GMT	John Goerzen <jgoerzen@complete.org>	patch-96

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-96


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs


2004-12-20 16:20:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-95

    Summary:
      Checkpointing, compiles
    Revision:
      missingh--head--0.7--patch-95


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs


2004-12-20 16:15:03 GMT	John Goerzen <jgoerzen@complete.org>	patch-94

    Summary:
      Checkpointing (compiles)
    Revision: